test: allow null JPQL DTO fixture row